--- a/Setup/Dockerfile
+++ b/Setup/Dockerfile
@@ -13,30 +13,30 @@ RUN apt-get -y upgrade
 #Install all the languages/compilers we are supporting.
 RUN apt-get install -y gcc
 RUN apt-get install -y g++
-#RUN apt-get install -y php5-cli
-#RUN apt-get install -y ruby
+RUN apt-get install -y php5-cli
+RUN apt-get install -y ruby
 RUN apt-get install -y python3
 #RUN apt-get install -y mono-xsp2 mono-xsp2-base
 
 #RUN apt-get install -y mono-vbnc
-RUN apt-get install -y npm
-#RUN apt-get install -y golang-go	
-RUN apt-get install -y nodejs
+#RUN apt-get install -y npm
+RUN apt-get install -y golang-go	
+#RUN apt-get install -y nodejs
 
-RUN npm install -g underscore request express jade shelljs passport http sys jquery lodash async mocha moment connect validator restify ejs ws co when helmet wrench brain mustache should backbone forever  debug && export NODE_PATH=/usr/local/lib/node_modules/
+#RUN npm install -g underscore request express jade shelljs passport http sys jquery lodash async mocha moment connect validator restify ejs ws co when helmet wrench brain mustache should backbone forever  debug && export NODE_PATH=/usr/local/lib/node_modules/
 
 #RUN apt-get install -y clojure1.4
 
 
 #prepare for Java download
-#RUN apt-get install -y python-software-properties
-#RUN apt-get install -y software-properties-common
+RUN apt-get install -y python-software-properties
+RUN apt-get install -y software-properties-common
 
 #grab oracle java (auto accept licence)
-#RUN add-apt-repository -y ppa:webupd8team/java
-#RUN apt-get update
-#RUN echo oracle-java7-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
-#RUN apt-get install -y oracle-java7-installer
+RUN add-apt-repository -y ppa:webupd8team/java
+RUN apt-get update
+RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections
+RUN apt-get install -y oracle-java8-installer
 
 
 #RUN apt-get install -y gobjc
@@ -44,11 +44,12 @@ RUN npm install -g underscore request express jade shelljs passport http sys jqu
 
 
 #RUN apt-get install -y scala
-RUN apt-get install -y mysql-server
+#RUN apt-get install -y mysql-server
 RUN apt-get install -y perl
 
 RUN apt-get install -y sudo
 RUN apt-get install -y bc
 
-RUN echo "mysql ALL = NOPASSWD: /usr/sbin/service mysql start" | cat >> /etc/sudoers
+#RUN echo "mysql ALL = NOPASSWD: /usr/sbin/service mysql start" | cat >> /etc/sudoers
 
+RUN useradd user
